@@ -1,5 +1,7 @@
 == master
 
+* Change how the base module is included to prevent namespacing conflicts
+
 == 0.3.0 / 2008-09-07
 
 * No longer allow additional arguments to be passed into event actions
